Gradual markup to visualize the content of the home page.

--- a/index.html
+++ b/index.html
@@ -27,10 +27,45 @@
             
         </div>
         <div class="content">
-            <div class="card">One</div>
-            <div class="card">Two</div>
-            <div class="card">Three</div>
-            <div class="card">Four</div>
+            <div class="card cardheader" id="ticket">
+                <h2>Recent Tickets</h2>
+                <p>Ticket ID: #000</p>
+                <p>iPhone 12</p>
+                <p>Cracked Screen</p>
+                <h4>Details</h4>
+                <table>
+                    <tr>
+                        <td nowrap><span style="display: inline-block;">6/13/2021</span><span style="display: inline-block;">13:00:</span></td>
+                        <td>Customer phone arrived extremely cracked.</td>
+                    </tr>
+                    <tr>
+                        <td nowrap><span style="display: inline-block;">6/13/2021</span><span style="display: inline-block;">14:15:</span></td>
+                        <td>Completed repairs and testing phone functionality</td>
+                    </tr>
+                    <tr>
+                        <td nowrap><span style="display: inline-block;">6/13/2021</span><span style="display: inline-block;">15:00:</span></td>
+                        <td>Post repair testing passed. Phone is ready to be picked up</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="card cardheader" id="partsorder">
+                <h2>Recent Parts Ordered</h2>
+                <p>Order ID: #000</p>
+                <p>Part Name</p>
+                <p>Assigned Ticket ID: #101</p>
+            </div>
+            <div class="card cardheader" >
+                <h2>Recent Products</h2>
+                <p>Product ID: #000</p>
+                <p>Product Name</p>
+                <p>Quantity: 000</p>
+            </div>
+            <div class="card cardheader">
+                <h2>Recent Customers</h2>
+                <p>Customer ID: #000</p>
+                <p>Name:</p>
+    
+            </div>
         </div>
     </div>
 </body>
