Used as placeholder template for ticket creation
-The ticket creation template was used in the javascript.

--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -8,7 +8,7 @@
     <title>Tickets</title>
 </head>
 <body>
-    <div class="container">
+    <div id="ticketContainer">
         <div class="topstrip">
             <div id="branding">
                 <a href="/index.html" title="Home Page">
@@ -26,9 +26,85 @@
             </nav>
             
         </div>
-        <div class="content">
-            
+        <div id="ticketContent">
+            <div id="ticketBody">
+                <h2>Tickets</h2>
+                <form id="ticketSearchBar" action="">
+                    <input type="text" id="ticketsearch" name="ticketsearch" placeholder="Search Tickets">
+                    <input type="submit" id="ticketsearchbutton" value="Search">
+                    <button type="button" id="createticket">Create Ticket</button>
+                </form>
+
+                <div>
+                    <table id="tickettable">
+                        <tr>
+                            <th>
+                                <button>Edit</button>
+                            </th>
+                            <th>Date</th>
+                            <th>Ticket ID</th>
+                            <th>Customer</th>
+                            <th>Details</th>
+                        </tr>
+                        <tr>
+                            <td>
+                                <button>Edit</button>
+                            </td>
+                            <td>6/20/2021</td>
+                            <td>#001</td>
+                            <td>Jane Jenkins</td>
+                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum iure tenetur, quis eum esse, cumque nobis error quam enim voluptates corrupti voluptatum, repudiandae unde nostrum.</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <button>Edit</button>
+                            </td>
+                            <td>6/20/2021</td>
+                            <td>#001</td>
+                            <td>Jane Jenkins</td>
+                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum iure tenetur, quis eum esse, cumque nobis error quam enim voluptates corrupti voluptatum, repudiandae unde nostrum.</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <button>Edit</button>
+                            </td>
+                            <td>6/20/2021</td>
+                            <td>#001</td>
+                            <td>Jane Jenkins</td>
+                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum iure tenetur, quis eum esse, cumque nobis error quam enim voluptates corrupti voluptatum, repudiandae unde nostrum.</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <button>Edit</button>
+                            </td>
+                            <td>6/20/2021</td>
+                            <td>#001</td>
+                            <td>Jane Jenkins</td>
+                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum iure tenetur, quis eum esse, cumque nobis error quam enim voluptates corrupti voluptatum, repudiandae unde nostrum.</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <button>Edit</button>
+                            </td>
+                            <td>6/20/2021</td>
+                            <td>#001</td>
+                            <td>Jane Jenkins</td>
+                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum iure tenetur, quis eum esse, cumque nobis error quam enim voluptates corrupti voluptatum, repudiandae unde nostrum.</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <button>Edit</button>
+                            </td>
+                            <td>6/20/2021</td>
+                            <td>#001</td>
+                            <td>Jane Jenkins</td>
+                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum iure tenetur, quis eum esse, cumque nobis error quam enim voluptates corrupti voluptatum, repudiandae unde nostrum.</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
+    <script src="/js/script.js"></script>
 </body>
 </html>
